[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/coin.png" type="Texture" id=1]
[ext_resource path="res://str/addons/Coin.gd" type="Script" id=2]
[ext_resource path="res://assets/336933__free-rush__coin4.wav" type="AudioStream" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Bouncing"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("coin:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.241484, 3.4822 ),
"update": 0,
"values": [ Vector2( 0, 31.1478 ), Vector2( 0, -19.8214 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.420448, 1.62451 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 39.3431

[node name="Coin" type="KinematicBody2D"]
position = Vector2( 0, -19.0397 )
scale = Vector2( 0.532647, 0.532647 )
collision_layer = 4
collision_mask = 0
script = ExtResource( 2 )

[node name="coin" type="Sprite" parent="."]
position = Vector2( 0, 31.1478 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Bouncing = SubResource( 1 )
anims/fade_in = SubResource( 2 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( -5.32213, -2.3654 )
scale = Vector2( 4.48896, 4.13415 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -2.8316 )
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]

[node name="Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
